Update homepage layout

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <!-- Mobile Nav Menu -->
 <div id="mobileNav" class="hidden flex-col md:hidden px-6 pb-4 bg-[#121212] text-white transition-all duration-300 ease-in-out origin-top animate-fade-in">
   <a href="#about" class="py-2 hover:text-crayTeal block">About</a>
-  <a href="#services" class="py-2 hover:text-crayTeal block">Services</a>
+  <a href="#benefits" class="hover:text-crayTeal">Services</a>
   <a href="#pricing" class="py-2 hover:text-crayTeal block">Pricing</a>
   <a href="#portfolio" class="py-2 hover:text-crayTeal block">Portfolio</a>
   <a href="#contact" class="py-2 hover:text-crayTeal block">Contact</a>
@@ -190,7 +190,7 @@
     <!-- Desktop Nav -->
     <nav class="hidden md:flex space-x-8 text-sm font-medium text-white">
       <a href="#about" class="hover:text-crayTeal">About</a>
-      <a href="#services" class="hover:text-crayTeal">Services</a>
+<a href="#benefits" class="hover:text-crayTeal">Services</a>
       <a href="#pricing" class="hover:text-crayTeal">Pricing</a>
       <a href="#portfolio" class="hover:text-crayTeal">Portfolio</a>
       <a href="#contact" class="hover:text-crayTeal">Contact</a>
@@ -200,7 +200,7 @@
   <!-- Mobile Nav Menu -->
   <div id="mobileNav" class="hidden flex-col md:hidden px-6 pb-4 bg-[#121212] text-white">
     <a href="#about" class="py-2 hover:text-crayTeal">About</a>
-    <a href="#services" class="py-2 hover:text-crayTeal">Services</a>
+<a href="#benefits" class="hover:text-crayTeal">Services</a>
     <a href="#pricing" class="py-2 hover:text-crayTeal">Pricing</a>
     <a href="#portfolio" class="py-2 hover:text-crayTeal">Portfolio</a>
     <a href="#contact" class="py-2 hover:text-crayTeal">Contact</a>
