Update homepage layout

--- a/index.html
+++ b/index.html
@@ -198,13 +198,14 @@
   </div>
 
   <!-- Mobile Nav Menu -->
-  <div id="mobileNav" class="hidden flex-col md:hidden px-6 pb-4 bg-[#121212] text-white">
-    <a href="#about" class="py-2 hover:text-crayTeal">About</a>
-<a href="#benefits" class="hover:text-crayTeal">Services</a>
-    <a href="#pricing" class="py-2 hover:text-crayTeal">Pricing</a>
-    <a href="#portfolio" class="py-2 hover:text-crayTeal">Portfolio</a>
-    <a href="#contact" class="py-2 hover:text-crayTeal">Contact</a>
-  </div>
+<div id="mobileNav" class="hidden flex-col md:hidden px-6 pb-4 bg-gradient-to-b from-black/40 to-black/10 backdrop-blur-md text-white rounded-b-xl shadow-xl z-40">
+  <a href="#about" class="py-2 hover:text-crayTeal">About</a>
+  <a href="#benefits" class="py-2 hover:text-crayTeal">Services</a>
+  <a href="#pricing" class="py-2 hover:text-crayTeal">Pricing</a>
+  <a href="#portfolio" class="py-2 hover:text-crayTeal">Portfolio</a>
+  <a href="#contact" class="py-2 hover:text-crayTeal">Contact</a>
+</div>
+
 </header>
 <div id="menu-overlay" class="fixed inset-0 bg-black bg-opacity-60 z-40 hidden transition-opacity duration-300 md:hidden"></div>
 
