--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 </button>
 
 <!-- Mobile Nav Menu -->
-<div id="mobileNav" class="hidden flex-col md:hidden px-6 pb-4 bg-[#121212] text-white transition-all duration-300 ease-in-out origin-top animate-fade-in">
+<div id="mobileNav" class="hidden flex-col md:hidden px-6 pb-4 bg-transparent text-white transition-all duration-300 ease-in-out origin-top animate-fade-in">
   <a href="#about" class="py-2 hover:text-crayTeal block">About</a>
   <a href="#benefits" class="hover:text-crayTeal">Services</a>
   <a href="#pricing" class="py-2 hover:text-crayTeal block">Pricing</a>
