--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
         },
         animation: {
           'fade-in': 'fadeIn 0.3s ease-out forwards',
+          'fade-in-up': 'fadeInUp 0.5s ease-out forwards',
           'pulse-slow': 'pulseSlow 6s ease-in-out infinite',
         },
         keyframes: {
           fadeIn: {
             '0%': { opacity: '0', transform: 'translateY(-10px)' },
+            '100%': { opacity: '1', transform: 'translateY(0)' },
+          },
+          fadeInUp: {
+            '0%': { opacity: '0', transform: 'translateY(10px)' },
             '100%': { opacity: '1', transform: 'translateY(0)' },
           },
           pulseSlow: {
@@ -44,6 +49,7 @@
     }
   };
 </script>
+
 
 
 
@@ -178,13 +184,14 @@
 </button>
 
 <!-- Mobile Nav Menu -->
-<div id="mobileNav" class="hidden flex-col md:hidden px-6 pb-4 bg-transparent text-white transition-all duration-300 ease-in-out origin-top animate-fade-in">
-  <a href="#about" class="py-2 hover:text-crayTeal block">About</a>
-  <a href="#benefits" class="hover:text-crayTeal">Services</a>
-  <a href="#pricing" class="py-2 hover:text-crayTeal block">Pricing</a>
-  <a href="#portfolio" class="py-2 hover:text-crayTeal block">Portfolio</a>
-  <a href="#contact" class="py-2 hover:text-crayTeal block">Contact</a>
+<div id="mobileNav" class="hidden flex-col md:hidden px-6 pb-4 bg-transparent text-white transition-all duration-300 ease-in-out origin-top">
+  <a href="#about" class="py-2 hover:text-crayTeal block opacity-0 animate-fade-in-up" style="animation-delay: 0.1s;">About</a>
+  <a href="#benefits" class="py-2 hover:text-crayTeal block opacity-0 animate-fade-in-up" style="animation-delay: 0.2s;">Services</a>
+  <a href="#pricing" class="py-2 hover:text-crayTeal block opacity-0 animate-fade-in-up" style="animation-delay: 0.3s;">Pricing</a>
+  <a href="#portfolio" class="py-2 hover:text-crayTeal block opacity-0 animate-fade-in-up" style="animation-delay: 0.4s;">Portfolio</a>
+  <a href="#contact" class="py-2 hover:text-crayTeal block opacity-0 animate-fade-in-up" style="animation-delay: 0.5s;">Contact</a>
 </div>
+
 
 
     <!-- Desktop Nav -->
@@ -197,14 +204,15 @@
     </nav>
   </div>
 
-  <!-- Mobile Nav Menu -->
+<!-- Mobile Nav Menu -->
 <div id="mobileNav" class="hidden flex-col md:hidden px-6 pb-4 bg-gradient-to-b from-black/40 to-black/10 backdrop-blur-md text-white rounded-b-xl shadow-xl z-40">
-  <a href="#about" class="py-2 hover:text-crayTeal">About</a>
-  <a href="#benefits" class="py-2 hover:text-crayTeal">Services</a>
-  <a href="#pricing" class="py-2 hover:text-crayTeal">Pricing</a>
-  <a href="#portfolio" class="py-2 hover:text-crayTeal">Portfolio</a>
-  <a href="#contact" class="py-2 hover:text-crayTeal">Contact</a>
+  <a href="#about" class="py-2 text-lg font-semibold tracking-wide hover:text-crayTeal transition duration-200">About</a>
+  <a href="#benefits" class="py-2 text-lg font-semibold tracking-wide hover:text-crayTeal transition duration-200">Services</a>
+  <a href="#pricing" class="py-2 text-lg font-semibold tracking-wide hover:text-crayTeal transition duration-200">Pricing</a>
+  <a href="#portfolio" class="py-2 text-lg font-semibold tracking-wide hover:text-crayTeal transition duration-200">Portfolio</a>
+  <a href="#contact" class="py-2 text-lg font-semibold tracking-wide hover:text-crayTeal transition duration-200">Contact</a>
 </div>
+
 
 </header>
 <div id="menu-overlay" class="fixed inset-0 bg-black bg-opacity-60 z-40 hidden transition-opacity duration-300 md:hidden"></div>
