Update homepage layout

--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Craytivo | Fast, Affordable Web Design for Small Businesses in Canada </title>
+<meta name="description" content="Craytivo builds fast, affordable websites for small businesses in Canada and Zimbabwe. Mobile-first, lead-generating design with quick turnaround and clear pricing." />
+<!-- Favicon -->
+  <link rel="icon" href="assets\images\favicon.png" type="image/svg+xml" />
+  
+  <!-- Meta SEO Essentials -->
+<meta name="keywords" content="web design, custom websites, small business websites, Zimbabwe web design, Canada web development, Craytivo, mobile websites, affordable web design, lead generation sites" />
+<meta name="author" content="Craytivo" />
+<link rel="canonical" href="https://craytivo.com/" />
+<meta name="robots" content="index, follow" />
+
+<!-- Open Graph (Facebook, LinkedIn) -->
+<meta property="og:title" content="Craytivo – Affordable Custom Web Design for Canadian Small Businesses" />
+<meta property="og:description" content="We build fast, mobile-optimized websites for small businesses in Canada & Zimbabwe. Custom design. Affordable rates. Fast turnaround." />
+<meta property="og:image" content="https://craytivo.com/assets/preview.jpg" />
+<meta property="og:url" content="https://craytivo.com/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Craytivo – Bold Custom Web Design" />
+<meta name="twitter:description" content="Craytivo builds sleek, mobile-first websites that help Canadian and Zimbabwean small businesses grow online." />
+<meta name="twitter:image" content="https://craytivo.com/assets/preview.jpg" />
+
+
+
   <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet" />
 
   <script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox-plus-jquery.min.js"></script>
 
-<title>Craytivo – Affordable Custom Web Design for Canadian Small Businesses</title>
 
 <meta name="description" content="Craytivo helps small businesses in Zimbabwe and Canada grow with bold, mobile-friendly, lead-generating websites. Affordable pricing and fast turnaround." />
   <meta property="og:title" content="Craytivo - Bold Web Design" />
