--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,16 @@ hero.addEventListener("mouseleave", () => {
   const emailError = document.getElementById("email-error");
   const messageError = document.getElementById("message-error");
 
+  // Track if fields have been interacted with
+  let nameTouched = false;
+  let emailTouched = false;
+  let messageTouched = false;
+
+  // Mark as touched on blur
+  nameInput.addEventListener("blur", () => { nameTouched = true; checkFormValidity(); });
+  emailInput.addEventListener("blur", () => { emailTouched = true; checkFormValidity(); });
+  messageInput.addEventListener("blur", () => { messageTouched = true; checkFormValidity(); });
+
   // Live validation
   nameInput.addEventListener("input", checkFormValidity);
   emailInput.addEventListener("input", checkFormValidity);
@@ -1013,7 +1023,7 @@ hero.addEventListener("mouseleave", () => {
 
     // Validate name
     if (nameInput.value.trim() === "") {
-      nameError.classList.remove("hidden");
+      if (nameTouched) nameError.classList.remove("hidden");
       isValid = false;
     } else {
       nameError.classList.add("hidden");
@@ -1022,7 +1032,7 @@ hero.addEventListener("mouseleave", () => {
     // Validate email
     const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
     if (!emailRegex.test(emailInput.value.trim())) {
-      emailError.classList.remove("hidden");
+      if (emailTouched) emailError.classList.remove("hidden");
       isValid = false;
     } else {
       emailError.classList.add("hidden");
@@ -1030,13 +1040,13 @@ hero.addEventListener("mouseleave", () => {
 
     // Validate message
     if (messageInput.value.trim() === "") {
-      messageError.classList.remove("hidden");
+      if (messageTouched) messageError.classList.remove("hidden");
       isValid = false;
     } else {
       messageError.classList.add("hidden");
     }
 
-    // Toggle button state
+    // Toggle button
     if (isValid) {
       submitButton.disabled = false;
       submitButton.classList.remove("cursor-not-allowed", "opacity-50");
@@ -1062,7 +1072,8 @@ hero.addEventListener("mouseleave", () => {
 
     if (response.ok) {
       contactForm.reset();
-      checkFormValidity(); // Re-disable button
+      nameTouched = emailTouched = messageTouched = false;
+      checkFormValidity();
       showModal();
     } else {
       alert("Something went wrong. Please try again.");
@@ -1073,30 +1084,21 @@ hero.addEventListener("mouseleave", () => {
   function showModal() {
     modal.classList.remove("pointer-events-none", "opacity-0", "scale-95");
     modal.classList.add("opacity-100", "scale-100");
-
-    // Lock scroll
     document.body.style.overflow = "hidden";
-
-    // Auto-close after 5s
-    setTimeout(() => {
-      closeModal();
-    }, 7000);
+    setTimeout(closeModal, 7000);
   }
 
-  // Close modal
   function closeModal() {
     modal.classList.add("pointer-events-none", "opacity-0", "scale-95");
     modal.classList.remove("opacity-100", "scale-100");
-
-    // Unlock scroll
     document.body.style.overflow = "";
   }
 
-  // Escape key closes modal
   document.addEventListener("keydown", (e) => {
     if (e.key === "Escape") closeModal();
   });
 </script>
+
 
 
 
@@ -1112,37 +1114,43 @@ hero.addEventListener("mouseleave", () => {
 <div class="h-[2px] w-full bg-gradient-to-r from-crayRed via-crayTeal to-crayYellow opacity-60"></div>
 
 <!-- Footer -->
-<footer class="bg-[#121212] border-t border-white/10 text-gray-400 py-10 px-6 text-sm">
-  <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-6">
+<footer class="bg-[#121212] border-t border-white/10 text-gray-400 py-8 px-6 text-sm">
+  <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center md:items-start gap-6">
 
-    <!-- Left Text -->
-    <div class="text-center md:text-left">
-      <p class="mb-1">&copy; 2025 <span class="text-crayYellow font-medium">Craytivo</span>. Built with purpose, powered by precision.</p>
+    <!-- Left Column -->
+    <div class="md:w-1/2 text-center md:text-left space-y-1">
+      <p>&copy; 2025 <span class="text-crayYellow font-medium">Craytivo</span>. Built with purpose, powered by precision.</p>
       <p class="text-xs text-gray-500">Purposeful design. Seamless functionality. Crafted to elevate your brand.</p>
     </div>
 
-    <!-- Contact Info -->
-    <div class="text-center md:text-right">
-      <a href="mailto:craytivo@gmail.com" class="hover:text-crayTeal transition font-medium">
+    <!-- Right Column -->
+    <div class="md:w-1/2 text-center md:text-right space-y-2">
+      <!-- Email -->
+      <a href="mailto:craytivo@gmail.com" class="hover:text-crayTeal transition font-medium block">
         craytivo@gmail.com
       </a>
-      <div class="flex justify-center md:justify-end space-x-4 mt-2">
 
-        
+      <!-- Legal Links -->
+      <div class="space-x-3 text-xs">
+        <a href="/privacy-policy.html" class="hover:text-crayTeal transition">Privacy Policy</a>
+        <span class="text-gray-600">|</span>
+        <a href="/terms-of-service.html" class="hover:text-crayTeal transition">Terms of Service</a>
+      </div>
 
-        <!-- Twitter -->
+      <!-- Socials -->
+      <div class="flex justify-center md:justify-end mt-2 space-x-4">
         <a href="https://x.com/craytivo" target="_blank" aria-label="Twitter" class="hover:text-crayTeal transition">
           <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
             <path d="M23 3a10.9 10.9 0 01-3.14 1.53A4.48 4.48 0 0012.15 8v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5.5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
           </svg>
         </a>
-
-        
-
       </div>
     </div>
+
   </div>
 </footer>
+
+
 
 
 
