Update homepage layout

--- a/index.html
+++ b/index.html
@@ -434,17 +434,15 @@ hero.addEventListener("mouseleave", () => {
 
 
  <!-- About -->
-<section id="about" class="py-28 px-6 max-w-6xl mx-auto text-center" data-aos="fade-up">
+<section id="about" class="py-24 px-6 max-w-6xl mx-auto text-center" data-aos="fade-up">
   <h2 class="text-3xl sm:text-4xl font-bold mb-6 text-crayYellow tracking-tight">
-    Elevate Your Digital Presence with Craytivo
+    Premium Sites for Ambitious Brands
   </h2>
 
-  <p class="text-gray-300 text-base sm:text-lg mb-14 max-w-3xl mx-auto leading-relaxed font-medium">
-    Your brand deserves more than a generic website — it deserves a refined, results-driven platform that commands attention and builds lasting trust.<br><br>
-    At Craytivo, I craft sleek, high-performance websites tailored to ambitious businesses ready to grow, lead, and convert. Every detail is strategic. Every element is intentional. The result? A digital experience that not only looks exceptional — but works relentlessly for your brand.<br><br>
-    This isn’t template design. This is digital craftsmanship — built to set you apart.
+  <p class="text-gray-300 text-base sm:text-lg mb-14 max-w-2xl mx-auto leading-relaxed font-medium">
+    You’re here to lead. Your site should reflect that.<br><br>
+    Craytivo builds custom, high-performance websites designed to elevate trust and drive results — no fluff, just function and finesse.
   </p>
-
   <div class="grid sm:grid-cols-3 gap-10 text-left mt-16">
     <!-- Card 1 -->
     <div class="bg-[#181818] border border-crayTeal/20 p-8 rounded-3xl shadow-lg hover:shadow-crayTeal/30 hover:scale-[1.03] transition-all duration-300">
