--- a/index.html
+++ b/index.html
@@ -726,10 +726,28 @@ hero.addEventListener("mouseleave", () => {
       A curated selection of high-performing websites built to drive results and elevate brands.
     </p>
 
-    <div class="grid sm:grid-cols-2 gap-8 mt-10 text-left">
+    <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3 auto-rows-fr text-left">
+      
+      <!-- OT Vibez Studio -->
+      <article class="bg-white/5 border border-white/10 backdrop-blur-lg rounded-2xl shadow-xl p-6 transition hover:scale-[1.02] hover:-translate-y-1 duration-300">
+  <div class="overflow-hidden rounded-xl border border-white/10 shadow-md mb-4">
+          <img 
+            src="assets\images\ot-vibez-768w.webp"
+            srcset="assets\images\ot-vibez-400w.webp 400w, assets\images\ot-vibez-768w.webp 768w, assets\images\ot-vibez-1024w.webp 1024w"
+            sizes="(max-width: 640px) 100vw, 95vw"
+            loading="lazy"
+            width="1024" height="480"
+            alt="OT Vibez Studio recording and rehearsal space"
+            class="w-full h-48 object-cover rounded-xl" />
+        </div>
+        <h3 class="text-white text-base sm:text-lg font-semibold mb-1">OT Vibez Studio</h3>
+        <p class="text-gray-400 text-sm leading-relaxed mb-2">
+          A bold website for Edmonton’s premier creative studio — optimized for mobile booking, SEO, and a luxurious user experience.
+        </p>
+        <a href="https://otvibez.com/" target="_blank" class="text-crayTeal text-sm font-medium hover:underline">Visit Website →</a>
+      </article>
 
-      <!-- Project Cards -->
-      <!-- Repeat pattern -->
+      <!-- Marina Homes -->
       <article class="bg-white/5 border border-white/10 backdrop-blur-lg rounded-2xl shadow-xl p-6 transition hover:scale-[1.02] hover:-translate-y-1 duration-300">
         <div class="overflow-hidden rounded-xl border border-white/10 shadow-md mb-4">
           <img 
@@ -748,7 +766,6 @@ hero.addEventListener("mouseleave", () => {
         <a href="https://marinahomes.ca/" target="_blank" class="text-crayTeal text-sm font-medium hover:underline">Visit Website →</a>
       </article>
 
-      <!-- Continue same format for other projects -->
       <!-- Purpose Path -->
       <article class="bg-white/5 border border-white/10 backdrop-blur-lg rounded-2xl shadow-xl p-6 transition hover:scale-[1.02] hover:-translate-y-1 duration-300">
         <div class="overflow-hidden rounded-xl border border-white/10 shadow-md mb-4">
@@ -806,28 +823,30 @@ hero.addEventListener("mouseleave", () => {
         <a href="https://icarenaturals.ca/" target="_blank" class="text-crayTeal text-sm font-medium hover:underline">Visit Website →</a>
       </article>
 
-      <!-- Freedom Life Church (Full Width on Mobile) -->
-      <article class="bg-white/5 border border-white/10 backdrop-blur-lg rounded-2xl shadow-xl p-6 transition hover:scale-[1.02] hover:-translate-y-1 duration-300 sm:col-span-2">
-        <div class="overflow-hidden rounded-xl border border-white/10 shadow-md mb-4">
-          <img 
-            src="assets/images/flc-768.webp"
-            srcset="assets/images/flc-400.webp 400w, assets/images/flc-768.webp 768w, assets/images/flc-1024.webp 1024w"
-            sizes="(max-width: 640px) 100vw, 95vw"
-            loading="lazy"
-            width="1024" height="480"
-            alt="Freedom Life Church custom church website design"
-            class="w-full h-48 object-cover rounded-xl" />
-        </div>
-        <h3 class="text-white text-base sm:text-lg font-semibold mb-1">Freedom Life Church</h3>
-        <p class="text-gray-400 text-sm leading-relaxed mb-2">
-          A modern platform for a growing church with giving, streaming, and event features.
-        </p>
-        <a href="https://freedomlifechurch.ca/" target="_blank" class="text-crayTeal text-sm font-medium hover:underline">Visit Website →</a>
-      </article>
+      <!-- Freedom Life Church -->
+      <article class="bg-white/5 border border-white/10 backdrop-blur-lg rounded-2xl shadow-xl p-6 transition hover:scale-[1.02] hover:-translate-y-1 duration-300">
+  <div class="overflow-hidden rounded-xl border border-white/10 shadow-md mb-4">
+    <img 
+      src="assets/images/flc-768.webp"
+      srcset="assets/images/flc-400.webp 400w, assets/images/flc-768.webp 768w, assets/images/flc-1024.webp 1024w"
+      sizes="(max-width: 640px) 100vw, (max-width: 1024px) 48vw, 31vw"
+      loading="lazy"
+      width="1024" height="480"
+      alt="Freedom Life Church custom church website design"
+      class="w-full h-48 object-cover rounded-xl" />
+  </div>
+  <h3 class="text-white text-base sm:text-lg font-semibold mb-1">Freedom Life Church</h3>
+  <p class="text-gray-400 text-sm leading-relaxed mb-2">
+    A modern platform for a growing church with giving, streaming, and event features.
+  </p>
+  <a href="https://freedomlifechurch.ca/" target="_blank" class="text-crayTeal text-sm font-medium hover:underline">Visit Website →</a>
+</article>
 
     </div>
   </div>
 </section>
+
+
 
 
 
