--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
   <!-- Basic Meta -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DMKNSQXDJL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){ dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-DMKNSQXDJL');
+</script>
+
+
   <title>Craytivo | Fast, Affordable Web Design for Small Businesses in Canada</title>
   <meta name="description" content="Craytivo builds fast, affordable websites for small businesses in Canada and Zimbabwe. Mobile-first, lead-generating design with quick turnaround and clear pricing." />
   <meta name="keywords" content="web design, custom websites, small business websites, Zimbabwe web design, Canada web development, Craytivo, mobile websites, affordable web design, lead generation sites" />
